<resources>
    <string name="app_name">Editorials Guide</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_pdf_view">PdfView</string>
    <string name="title_activity_advisery">Advisery</string>
    <string name="title_activity_guid_lines">GuidLines</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_codeof_ethics">CodeofEthics</string>
    <string name="dialog_fire_missiles">are_yousure</string>
    <string name="fire">yes</string>
     <string name="your_string_here"><u>Hindi version</u>.
    </string>
     <string name="your_string_here1"><u>English version</u>.
    </string>
    <string name="cancel">cancel</string>
    <string name="Yes">yes</string>
    <string name="No">no</string>
    <string name="title_activity_pdfviewtow">Pdfviewtow</string>
    <string name="server_register_error">Server Registration Error</string>
    <string name="server_unregistered">Server Unregisterd</string>
    <string name="title_activity_change_password">ChangePassword</string>

    <string name="fontFamily__roboto_regular">sans-serif</string>
    <string name="fontFamily__roboto_light">sans-serif-light</string>

    <string name="fontFamily__roboto_condensed">sans-serif-condensed</string>

    <string name="fontFamily__roboto_medium">sans-serif-medium</string>
    <string name="fontFamily__roboto_black">sans-serif-black</string>
    <string name="fontFamily__roboto_condensed_light">sans-serif-condensed-light</string>

    <string name="fontFamily__roboto_thin">sans-serif-thin</string>
</resources>
