<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/dateText"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:text="5\n Mar"
        android:textColor="#FFFFFF"
        android:layout_marginRight="8dp"
        android:background="@drawable/corner_blue"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_toRightOf="@+id/dateText"
        android:layout_marginRight="2dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4D4D4D"
            android:textSize="15sp"
            android:fontFamily="@string/fontFamily__roboto_medium"
            android:id="@+id/detail_guid"
            android:layout_marginTop="5dp"
            android:text="Guideline for Election Broadcast"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:id="@+id/guid_date"
            android:visibility="visible"
            android:textStyle="italic"
            android:fontFamily="@string/fontFamily__roboto_thin"
            android:layout_marginTop="2dp"
            android:textColor="#4D4D4D"
            android:text="24 March, 2016"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_string_here1"
                android:textColor="#005297"
                android:background="#00000000"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:textSize="13sp"
                android:layout_marginRight="15dp"
                android:id="@+id/englis_ver"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:id="@+id/view"
                android:background="#005297"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#005297"
                android:background="#00000000"
                android:fontFamily="@string/fontFamily__roboto_light"
                android:textSize="13sp"
                android:layout_marginLeft="15dp"
                android:id="@+id/hindi_ver"
                android:text="@string/your_string_here"/>

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>